// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonToggle control 1`] = `
<Wrapper
  backgroundColor={null}
  bgColorOff="inherit"
  bgColorOn="inherit"
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  hidden={false}
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id={null}
  initialToggle={false}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="ButtonToggle"
  onClick={[Function]}
  onError={[Function]}
  onToggle={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Button
    backgroundColor={null}
    bgColorOff="inherit"
    bgColorOn="inherit"
    border={null}
    borderColor={null}
    bottom={null}
    className="ui-button-toggle test-class"
    color={null}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height={null}
    hidden={false}
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id={null}
    initialToggle={false}
    kbActivate=""
    left={null}
    location="none"
    maxHeight={null}
    maxWidth={null}
    minHeight={null}
    minWidth={null}
    noborder={false}
    noedit={false}
    nohover={false}
    nopropagation={true}
    notheme={false}
    notooltip={false}
    obj="ButtonToggle"
    onClick={[Function]}
    onToggle={[Function]}
    padding={null}
    ripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  />
</Wrapper>
`;

exports[`Test creation of a ButtonToggle control with on/off icons 1`] = `
<ButtonToggle
  backgroundColor={null}
  bgColorOff="inherit"
  bgColorOn="inherit"
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  hidden={false}
  iconName="bomb"
  iconNameOff="star-o"
  iconNameOn="star"
  iconStyle=""
  id={null}
  initialToggle={false}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="ButtonToggle"
  onClick={[Function]}
  onToggle={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test disabling of a ButtonToggle 1`] = `
<ButtonToggle
  backgroundColor={null}
  bgColorOff="inherit"
  bgColorOn="inherit"
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  hidden={false}
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id={null}
  initialToggle={false}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="ButtonToggle"
  onClick={[MockFunction]}
  onToggle={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making a ButtonToggle invisible 1`] = `
<ButtonToggle
  backgroundColor={null}
  bgColorOff="inherit"
  bgColorOn="inherit"
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  hidden={true}
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id={null}
  initialToggle={false}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="ButtonToggle"
  onClick={[MockFunction]}
  onToggle={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of ButtonToggle props object 1`] = `
Object {
  "backgroundColor": null,
  "bgColorOff": "inherit",
  "bgColorOn": "inherit",
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "fgColorOff": "gray",
  "fgColorOn": "black",
  "focus": false,
  "height": null,
  "hidden": false,
  "iconName": "bomb",
  "iconNameOff": "bomb",
  "iconNameOn": "bomb",
  "iconStyle": "",
  "id": null,
  "initialToggle": false,
  "kbActivate": "",
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "nopropagation": true,
  "notheme": false,
  "notooltip": false,
  "obj": "ButtonToggle",
  "onClick": [Function],
  "onToggle": [Function],
  "padding": null,
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of ButtonToggle props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
  "toggle": false,
}
`;
